buildscript {
    ext {
        springBootVersion = '2.4.5'
    }

    repositories {
        maven { url 'https://maven.aliyun.com/repository/gradle-plugin/' }
    }

    dependencies {
        classpath "org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}"
    }
}

allprojects {
    apply plugin: 'idea'
    apply plugin: 'java'
    apply plugin: 'org.springframework.boot'
    apply plugin: 'io.spring.dependency-management'

    sourceCompatibility = 1.15
    targetCompatibility = 1.15

    repositories {
        maven { url 'https://maven.aliyun.com/repository/public' }
    }

    sourceSets {
        main {
            java {
                srcDir 'src/main/java'
            }

            resources {
                srcDir 'src/main/resources'
                srcDir 'src/main/java'
            }
        }
    }

    configurations {
        developmentOnly
        runtimeClasspath {
            extendsFrom developmentOnly
        }
        compileOnly {
            extendsFrom annotationProcessor
        }
    }

    dependencies {
        compileOnly 'org.projectlombok:lombok'
        annotationProcessor 'org.projectlombok:lombok'

        implementation 'org.springframework.boot:spring-boot-starter-web'

        implementation group: 'com.google.code.gson', name: 'gson', version: '2.8.5'
        implementation group: 'com.squareup.okhttp3', name: 'okhttp', version: '4.9.1'
        implementation group: 'org.apache.commons', name: 'commons-lang3', version: '3.9'

        implementation group: 'org.web3j', name: 'core', version: '5.0.0'
        implementation group: 'org.bitcoinj', name: 'bitcoinj-core', version: '0.15.8'

        testImplementation('org.springframework.boot:spring-boot-starter-test') {
            exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
        }
    }

    test {
        useJUnitPlatform()
    }

    processResources {
        duplicatesStrategy(DuplicatesStrategy.INCLUDE)
    }

    tasks.withType(JavaCompile) {
        options.compilerArgs += "--enable-preview"
    }
    tasks.withType(Test) {
        jvmArgs += "--enable-preview"
    }
    tasks.withType(JavaExec) {
        jvmArgs += "--enable-preview"
    }
}